; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_linux-syscalls.c_uv__recvmmsg.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_linux-syscalls.c_uv__recvmmsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uv__mmsghdr = type { i32 }
%struct.timespec = type { i32 }

@ENOSYS = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@__NR_recvmmsg = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv__recvmmsg(i32 %0, %struct.uv__mmsghdr* %1, i32 %2, i32 %3, %struct.timespec* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.uv__mmsghdr*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.timespec*, align 8
  store i32 %0, i32* %6, align 4
  store %struct.uv__mmsghdr* %1, %struct.uv__mmsghdr** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.timespec* %4, %struct.timespec** %10, align 8
  %11 = load i32, i32* @ENOSYS, align 4
  store i32 %11, i32* @errno, align 4
  ret i32 -1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
